# gearbox

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  PLAN_WHEELS.md  PROJECT  SCHEMA.md  STATE.md  cbindgen.toml  flake.nix  pyproject.toml
.github/workflows/: release.yml
crates/gearbox-api/: Cargo.toml
crates/gearbox-api/src/: broker.rs  goto_api.rs  lib.rs  loader_api.rs  mark_api.rs  markers_api.rs  plugin.rs  reset_api.rs  spawn_api.rs  vehicle_api.rs  wire.rs
crates/gearbox-core/: Cargo.toml
crates/gearbox-core/src/: control.rs  lib.rs  planet.rs
crates/gearbox-core/src/presets/: drone.rs  husky.rs  mod.rs  oxbo_harvester.rs  registry.rs  robotti.rs  tractor.rs  tractor_articulated.rs
crates/gearbox-core/src/vehicle/: builder.rs  chassis.rs  container.rs  mesh.rs  mod.rs  power.rs  wheel.rs
crates/gearbox-editor/: Cargo.toml
crates/gearbox-editor/src/: dock_ribbons.rs  float.rs  gizmo.rs  gizmo_material.rs  heading_arrows.rs  inspector.rs  left_dock.rs  lib.rs  pending_spawn.rs  persist.rs  player_sync.rs  preset_registry.rs  properties.rs  right_dock.rs  selection.rs  selection_ring.rs  spawn_panel.rs  style.rs  transform_gizmos.rs  transport.rs  tree.rs  ui_panel.rs  usd_load.rs  usd_tree.rs  widgets.rs
crates/gearbox-editor/src/shaders/: gizmo.wgsl  heading_arrows.wgsl  selection_ring.wgsl
crates/gearbox-link/: Cargo.toml
crates/gearbox-link/src/: client.rs  lib.rs  server.rs  wire.rs
crates/gearbox-physics/: Cargo.toml
crates/gearbox-physics/src/: convert.rs  lib.rs  sensor.rs  sim.rs  vehicle.rs  vehicle_physics.rs  world.rs
crates/gearbox-physics/src/drive/: ackermann.rs  differential.rs  drone.rs  mod.rs  omni.rs  util.rs
crates/gearbox-physics/tests/: headless.rs
crates/gearbox-usd/: Cargo.toml
crates/gearbox-usd/src/: lib.rs  load.rs
crates/gearbox-viz/: Cargo.toml
crates/gearbox-viz/src/: camera.rs  clouds.rs  grid.rs  input.rs  lib.rs  scene.rs  spawn.rs  step.rs  sync.rs  window_settings.rs
crates/gearbox-world/: Cargo.toml
crates/gearbox-world/src/: lib.rs
include/: gearbox.h
scripts/: README.md  bale_run.py  bale_run_multi.py  discover.py  drive.py  goto.py  oxbo_flatland.py  oxbo_follow_points.py  oxbo_joystick.py  spawn.py  spawn_some.py  square.py  stop.py  watch.py
src/: control.rs  convert.rs  lib.rs  sim.rs  world.rs
src/presets/: car.rs  drone.rs  husky.rs  mod.rs  oxbo_harvester.rs  robotti.rs  tractor.rs
src/sensor/: mod.rs
src/vehicle/: builder.rs  chassis.rs  mod.rs  part.rs  parts_lib.rs  power.rs  wheel.rs
src/vehicle/drive/: ackermann.rs  differential.rs  mod.rs  omni.rs  util.rs
tests/: headless.rs
