[workspace]
resolver = "2"
members = [
    "crates/gearbox-core",
    "crates/gearbox-physics",
    "crates/gearbox-viz",
    "crates/gearbox-editor",
    "bin/gearbox",
]

# Shared metadata. Each member inherits with `version.workspace = true`.
[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Local sibling crate — spatial types the whole gearbox stack speaks.
datapod = { path = "../datapod" }

# Physics backend — f64 variant of rapier3d. Matches datapod's f64
# spatial types, so every boundary crossing stops needing a lossy
# precision downcast.
rapier3d = { version = "0.32", package = "rapier3d-f64" }

# Bevy + ecosystem. Declared once here with their full feature sets so
# every crate that needs Bevy pulls the SAME build (otherwise cargo
# would see distinct feature unions and rebuild bevy twice).
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "async_executor",
    "multi_threaded",
    "bevy_asset",
    "bevy_state",
    "bevy_log",
    "bevy_window",
    "bevy_winit",
    "bevy_input_focus",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_light",
    "bevy_mesh",
    "bevy_camera",
    "bevy_image",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_scene",
    "default_font",
    "tonemapping_luts",
    "smaa_luts",
    "ktx2",
    "zstd_rust",
    "png",
    "x11",
    "reflect_auto_register",
] }
bevy_egui = { version = "0.39", default-features = false, features = [
    "default_fonts",
    "render",
] }
# Gamepad input — polled each frame by `gearbox-viz::gamepad`.
gilrs = "0.11"

# Internal: crate-to-crate path deps expressed once so members can just
# write `gearbox-core.workspace = true`.
gearbox-core    = { path = "crates/gearbox-core" }
gearbox-physics = { path = "crates/gearbox-physics" }
gearbox-viz     = { path = "crates/gearbox-viz" }
gearbox-editor  = { path = "crates/gearbox-editor" }
