[workspace]
resolver = "2"
members = [
    "crates/gearbox-api",
    "crates/gearbox-link",
    "crates/gearbox-world",
    "bin/gearbox",
]

# Shared metadata. Each member inherits with `version.workspace = true`.
[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Local sibling crate — spatial types the whole gearbox stack speaks.
datapod = { git = "https://codeberg.org/robolibs/datapod" }

# Physics backend — f64 variant of rapier3d. Matches datapod's f64
# spatial types, so every boundary crossing stops needing a lossy
# precision downcast.
rapier3d = { version = "0.32", package = "rapier3d-f64" }

# Bevy + ecosystem. Declared once here with their full feature sets so
# every crate that needs Bevy pulls the SAME build (otherwise cargo
# would see distinct feature unions and rebuild bevy twice).
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "async_executor",
    "multi_threaded",
    "bevy_asset",
    "bevy_state",
    "bevy_log",
    "bevy_window",
    "bevy_winit",
    "bevy_input_focus",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_light",
    "bevy_mesh",
    "bevy_camera",
    "bevy_image",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_picking",
    "bevy_scene",
    "default_font",
    "tonemapping_luts",
    "smaa_luts",
    "ktx2",
    "zstd_rust",
    "png",
    "jpeg",
    "bmp",
    "tga",
    "hdr",
    "webp",
    "tiff",
    "bevy_post_process",
    "morph",
    "x11",
    "wayland",
    "reflect_auto_register",
] }
bevy_egui = { version = "0.39", default-features = false, features = [
    "default_fonts",
    "render",
] }
# Zenoh — pub/sub + query/reply transport for the **tool API**
# (external robots / CLIs / scripting agents). Server-side only;
# does not cross the simulator ↔ renderer boundary (zenoh doesn't
# target wasm32).
zenoh = "1"

# aeronet — transport-agnostic Bevy networking, used for the
# **simulator ↔ renderer** link when those two layers are split
# across processes (e.g. headless sim + wasm browser renderer).
# Pure Rust on both ends, wasm-friendly WebSocket IO layer.
aeronet = "0.20"
# WebTransport IO for aeronet — QUIC-based, no HOL blocking, unreliable
# datagrams available. Declared with no default features so
# `gearbox-link` can opt in to `client` / `server` / `dangerous-
# configuration` independently; you want only one side per build
# target (headless sim = server; wasm renderer = client).
aeronet_webtransport = { version = "0.20", default-features = false }

gearbox-api     = { path = "crates/gearbox-api" }
gearbox-link    = { path = "crates/gearbox-link" }
bevy_frost      = { git = "https://github.com/bresilla/bevy_frost", package = "bevy_frost" }
bevy_glacial    = { git = "https://github.com/bresilla/bevy_glacial", rev = "eb67675" }
# Pinned to a specific commit so a transitive update upstream
# can't silently change scene-projection behaviour. Bump by
# editing this `rev`.
# Pinned commit carrying the variant-label cache discriminator
# (`asset_path#variants:...`) — without it, `load_with_settings`
# collapses every variant request onto a single handle and the
# last load wins for every consumer.
# usd_bevy        = { path = "../../other/OUSD/bevy_openusd/crates/usd_bevy" }
usd_bevy        = { git = "https://github.com/bresilla/bevy_openusd", package = "usd_bevy" }
usd_schema      = { git = "https://github.com/bresilla/bevy_openusd", package = "usd_schema" }
openusd         = { git = "https://github.com/mxpv/openusd", rev = "fe92b73224c611831be244afac9cf7654b5ef51e" }
