[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "gearbox"
version = "0.0.6"
description = "Python bindings for the gearbox simulator"
requires-python = ">=3.9"

[tool.maturin]
manifest-path = "bin/gearbox/Cargo.toml"
features = ["python"]
module-name = "gearbox"
