[package]
name = "gearbox-api"
description = "Zenoh-based USD tool API for gearbox."
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["bevy"]
# Bevy plugin layer — USD load / marker / reset systems.
bevy = ["dep:bevy", "dep:usd_bevy"]

[dependencies]
datapod.workspace = true
zenoh.workspace = true
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"

bevy = { workspace = true, optional = true }
usd_bevy = { workspace = true, optional = true }
