[package]
name = "gearbox-usd"
description = "Load OpenUSD scenes (rigid bodies, colliders, joints) into a gearbox-physics Sim. Pure Rust — no Bevy."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gearbox-physics.workspace = true
rapier3d.workspace = true

# The pure-Rust USD layer from the bevy_openusd workspace. Path deps
# while both repos live side-by-side; switch to git once we cut a tag.
usd_schema = { path = "../../../../other/OUSD/bevy_openusd/crates/usd_schema" }
usd_rapier = { path = "../../../../other/OUSD/bevy_openusd/crates/usd_rapier" }
openusd = { workspace = true, features = ["physics"] }

anyhow = "1"
glam = "0.30"
log = "0.4"
