[package]
name = "gearbox-viz"
description = "Bevy rendering layer for gearbox — draws the sim, feeds input, owns the chase camera."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gearbox-core.workspace = true
gearbox-physics.workspace = true
datapod.workspace = true
bevy.workspace = true
gilrs.workspace = true
