[package]
name = "gearbox-world"
description = "The gearbox world layer: sky, sun, ambient, ground (visual + physics). The 'permanent stuff' Isaac-Sim-style apps want around any USD content they mount."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy.workspace = true
rapier3d.workspace = true
# `ChaseCamera` rig (orbit / pan / zoom) — same component the
# gearbox-viz editor uses, so apps that consume `WorldPlugin` get the
# same camera UX as the main editor.
bevy_glacial.workspace = true
# We insert a ground collider directly into `usd_bevy`'s `PhysicsWorld`
# resource so USD-loaded bodies actually rest on the ground rather than
# falling through it. This is the only point of contact between the
# gearbox world layer and the USD physics adapter.
usd_bevy = { path = "../../../../other/OUSD/bevy_openusd/crates/usd_bevy" }
